Bug 428854 - Nightcolor fails to activate after KWin or the whole session is restarted; must manually toggle it off and on again
Summary: Nightcolor fails to activate after KWin or the whole session is restarted; mu...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Night Color Control (other bugs)
Version First Reported In: git-master
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 430203 436612 448943 462126 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-08 19:47 UTC by ivan.planinar
Modified: 2024-05-30 09:10 UTC (History)
23 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ivan.planinar 2020-11-08 19:47:25 UTC
SUMMARY

Usually after restart, screen start as blue, without NC, then after 20-30 sec, NC applies and it's ok.

But sometimes after restart NC fails to load entirely. The icon (lamp) is there, says it's ON, but the screen is blue (no NC). 

The workaround is to click on the icon two times to turn both the screen yellow and to return NC to ON.

Software:
Latest KDE, Arch linux, Nvidia drivers 455.38. Also color corrected displays, two monitors.
Comment 1 Nate Graham 2020-11-09 17:44:54 UTC
Can confirm. This also happens after KWin is restarted.
Comment 2 Massimiliano L 2020-11-15 00:44:41 UTC
Experiencing this also in Fedora 33 (Plasma 5.20)

The Plasma splash screen shows briefly the night colour correction but then reverts to normal. Once the desktop appears I need to click two times on the widget icon to get the correction applied.
Comment 3 ivan.planinar 2020-11-15 22:19:09 UTC
For some reason this bug is even more active than before. Happens every 2nd or 3rd restart. It used to be like 1 out of 5.

Operating System: Arch Linux
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.1
Kernel Version: 5.9.8-arch1-1
OS Type: 64-bit
Processors: 16 × AMD Ryzen 7 3700X 8-Core Processor
Memory: 31,4 GiB of RAM
Graphics Processor: GeForce GTX 1060 6GB/PCIe/SSE2
Comment 4 Nate Graham 2020-12-10 16:05:50 UTC
*** Bug 430203 has been marked as a duplicate of this bug. ***
Comment 5 ivan.planinar 2020-12-22 17:22:56 UTC
Any news on this, or some further info needed?

This stopped working entirely for me. Before it was so-so, working every now and then, but now every time I reset the PC I have to manually apply the nightcolor layer. 

It just doesn't work. And I changed the GPU too, now I use AMD. So it's not GPU or video drivers related issue.
Comment 6 rrpeak+kdebug 2020-12-27 13:58:46 UTC
Maybe this helps to narrow it down - I'm experiencing this bug on

Operating System: Fedora 33
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.2
Kernel Version: 5.9.15-200.fc33.x86_64
OS Type: 64-bit
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,6 GiB of RAM
Graphics Processor: Radeon RX 5500 XT


whereas everything is working as expected on

Operating System: Pop!_OS 20.10
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Kernel Version: 5.8.0-7630-generic
OS Type: 64-bit
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: Radeon RX 5500 XT
Comment 7 Clément Labadie 2020-12-28 09:51:35 UTC
Similar issue here. 

After a restart, I can briefly see the screen color get warmer as the welcome screen is displayed, but it quickly reverts back to normal (before the desktop even appears). The lightbulb icon is ON, but night color needs to be switched off and on again (by clicking on the icon) to engage properly.

Operating System: Fedora 33
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.2
Kernel Version: 5.9.16-200.fc33.x86_64
OS Type: 64-bit
Processors: 8 x Intel Core i7-1065G7
Memory: 15,6 GiB of RAM
Graphics Processor: Mesa Intel Iris Plus Graphics
Comment 8 ivan.planinar 2020-12-28 12:46:39 UTC
(In reply to Clément Labadie from comment #7)
> Similar issue here. 
> 
> After a restart, I can briefly see the screen color get warmer as the
> welcome screen is displayed, but it quickly reverts back to normal (before
> the desktop even appears). The lightbulb icon is ON, but night color needs
> to be switched off and on again (by clicking on the icon) to engage properly.
> 
> Operating System: Fedora 33
> KDE Plasma Version: 5.20.4
> KDE Frameworks Version: 5.75.0
> Qt Version: 5.15.2
> Kernel Version: 5.9.16-200.fc33.x86_64
> OS Type: 64-bit
> Processors: 8 x Intel Core i7-1065G7
> Memory: 15,6 GiB of RAM
> Graphics Processor: Mesa Intel Iris Plus Graphics

Exactly, the KDE sign at the login is yellowish, but as soon as desktop is displayed it's blue/normal and very rarely switches back to yellow again.

In my case, this never worked good (I started using KDE ~2 months ago) but lately it's just almost always off.
Comment 9 emelenas 2021-02-15 06:49:53 UTC
I also experience this bug. When I start my computer before the night color switching time, it does not take night color settings: the screen color is normal. When the time arrives for night color to start changing, all of a sudden it takes the night color setting, colors change to warm and starts transitioning.
Comment 10 ash.summers 2021-02-27 21:19:01 UTC
Also experiencing this.

Operating System: Kubuntu 20.04
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Kernel Version: 5.11.0-051100-generic
OS Type: 64-bit
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 PRO 4750U with Radeon Graphics
Memory: 30.7 GiB of RAM
Graphics Processor: AMD RENOIR
Comment 11 Lemuel Simon 2021-04-20 05:53:10 UTC
I am also experiencing this problem. I have had this issue since I first used the KDE Plasma Desktop (5.19).

Operating System: openSUSE Tumbleweed 
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Kernel Version: 5.11.12-1-default
OS Type: 64-bit
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-3320M CPU @ 2.60GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 4000
Comment 12 Lua 2021-05-05 07:14:40 UTC
I'm having the same issue.

Operating System: Kubuntu 21.04
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2
Kernel Version: 5.11.0-16-generic
OS Type: 64-bit
Graphics Platform: X11
Processors: 8 × Intel® Core™ i5-8265U CPU @ 1.60GHz
Memory: 15,5 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 13 Lua 2021-05-05 07:14:51 UTC
*** Bug 436612 has been marked as a duplicate of this bug. ***
Comment 14 K Freed 2022-01-25 09:10:51 UTC
Can confirm this bug is still present (5.23.5, Garuda Linux)
Comment 15 galder 2022-02-12 15:20:33 UTC
*** Bug 448943 has been marked as a duplicate of this bug. ***
Comment 16 Lemuel Simon 2022-02-22 06:22:01 UTC
I am not sure if this was mentioned elsewhere, but I believe to problem is caused by a conflict between Night Color and 'Gamma Settings'. Night Color has worked consistently well for me (Plasma 5.24.1) until I open the 'Display Configuration' KCM in System Settings. Doing so would immediately 'reset' the display, getting rid of Night Color's red tint (while Night Color is still enabled.) Maybe that's why Night Color would 'disappear' shortly after activating at login, 'Gamma Settings/Display Configuration' gets triggered and fiddles with the gamma values. 

I have tested in X11, not sure how the Wayland session handles that.

Operating System: openSUSE Leap 15.3
KDE Plasma Version: 5.24.1
KDE Frameworks Version: 5.91.0
Qt Version: 5.15.2
Kernel Version: 5.3.18-150300.59.49-default (64-bit)
Graphics Platform: X11
Processors: 4 × Intel® Core™ i5-3320M CPU @ 2.60GHz
Memory: 7.6 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 4000
Comment 17 Lemuel Simon 2022-02-22 06:25:57 UTC
(In reply to Lemuel Simon from comment #16)
> I am not sure if this was mentioned elsewhere, but I believe to problem is
> caused by a conflict between Night Color and 'Gamma Settings'. Night Color
> has worked consistently well for me (Plasma 5.24.1) until I open the
> 'Display Configuration' KCM in System Settings. Doing so would immediately
> 'reset' the display, getting rid of Night Color's red tint (while Night
> Color is still enabled.) Maybe that's why Night Color would 'disappear'
> shortly after activating at login, 'Gamma Settings/Display Configuration'
> gets triggered and fiddles with the gamma values. 
> 
> I have tested in X11, not sure how the Wayland session handles that.
> 
> Operating System: openSUSE Leap 15.3
> KDE Plasma Version: 5.24.1
> KDE Frameworks Version: 5.91.0
> Qt Version: 5.15.2
> Kernel Version: 5.3.18-150300.59.49-default (64-bit)
> Graphics Platform: X11
> Processors: 4 × Intel® Core™ i5-3320M CPU @ 2.60GHz
> Memory: 7.6 GiB of RAM
> Graphics Processor: Mesa DRI Intel® HD Graphics 4000

I'm wondering if this is related: https://bugs.kde.org/show_bug.cgi?id=413134
Comment 18 zvova7890 2022-11-29 21:36:31 UTC
I'm also saw this issue, in my case it's been conflict with gnome-color-manager. NightColor is enabled and then disabled at start by the color manager with some problems with ICC profile. I have removed gnome-color-manager package and NightColor works fine now.
Comment 19 ratijas 2022-11-29 22:40:52 UTC
*** Bug 462126 has been marked as a duplicate of this bug. ***
Comment 20 Vlad Zahorodnii 2022-12-01 09:56:21 UTC
Git commit 8d047336824037998c271a2adea426fd221b0505 by Vlad Zahorodnii.
Committed on 01/12/2022 at 09:56.
Pushed by vladz into branch 'master'.

plugins/nightcolor: Register its own service name

In order to make monitoring Night Color appearing and disappearing robust,
make Night Color register its own dbus service.

M  +6    -0    src/plugins/nightcolor/nightcolordbusinterface.cpp
M  +1    -1    src/plugins/nightcolor/nightcolordbusinterface.h

https://invent.kde.org/plasma/kwin/commit/8d047336824037998c271a2adea426fd221b0505
Comment 21 Vlad Zahorodnii 2022-12-01 10:12:50 UTC
Git commit 8234c4b5f9e03abba54761fb99bb700142f64d25 by Vlad Zahorodnii.
Committed on 01/12/2022 at 09:58.
Pushed by vladz into branch 'master'.

applets/nightcolor: Use org.kde.NightColor service name

M  +1    -1    applets/nightcolor/plugin/inhibitor.cpp
M  +1    -1    applets/nightcolor/plugin/monitor.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/8234c4b5f9e03abba54761fb99bb700142f64d25
Comment 22 Massimiliano L 2023-08-04 17:13:44 UTC
It seems this report was automatically closed (?) but the bug is still present in KDE 5.27.6.
Comment 23 Nate Graham 2023-08-04 17:17:56 UTC
The original issue was fixed, but a new one cropped up, which is now fixed in Plasma 5.27.8; See Bug 461657. If you're still encountering the issue in 5.27.8 (which will be released in about 6 weeks), please leave a comment in that bug report, but don't re-open it. Someone else will re-open it if your issue looks like the same thing. Thanks!
Comment 24 Guy Sheffer 2024-05-30 09:06:17 UTC
(In reply to Nate Graham from comment #23)
> The original issue was fixed, but a new one cropped up, which is now fixed
> in Plasma 5.27.8; See Bug 461657. If you're still encountering the issue in
> 5.27.8 (which will be released in about 6 weeks), please leave a comment in
> that bug report, but don't re-open it. Someone else will re-open it if your
> issue looks like the same thing. Thanks!

Hey, I am running 5.27.8 (Ubuntu 23.10) and experiencing the issue