applets/nightcolor: Use org.kde.NightColor service name

BUG: 428854