applets/nightcolor/plugin/monitor.cpp
@@ -13,7 +13,7 @@
 #include <QDBusPendingReply>
 #include <QDBusServiceWatcher>
 
-static const QString s_serviceName = QStringLiteral("org.kde.KWin");
+static const QString s_serviceName = QStringLiteral("org.kde.NightColor");
 static const QString s_nightColorPath = QStringLiteral("/ColorCorrect");
 static const QString s_nightColorInterface = QStringLiteral("org.kde.kwin.ColorCorrect");
 static const QString s_propertiesInterface = QStringLiteral("org.freedesktop.DBus.Properties");
